--- a/public/css/index_app.css
+++ b/public/css/index_app.css
@@ -1,3 +1,8 @@
-.card-body{
- /*   background-color: #aae; */
+.card-body
+{
+    background-color: #FFF; 
+}
+.table th 
+{
+    padding-bottom:5px;
 }
